Mon Oct 14 11:18:46 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>
	* src/tds/iconv.c: fix compile under rh7.3

Mon Oct 14 10:28:27 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/odbc.c:
	- use always odbc date format (iso)
	- return success setting cursor type to forward

Mon Oct 14 10:09:02 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>
	* src/tds/locale.c src/tds/mem.c:
	- improve out of memory handling

Mon Oct 14 00:26:55 EDT 2002	nsc <Nicholas_Castellano@acml.com>
	* include/tds_sysdep_private.h.in:
	- Correct autoconf substitution for FREETDS_SYSCONFDIR.

Sun Oct 13 23:49:13 EDT 2002	nsc <Nicholas_Castellano@acml.com>
	* include/.cvsignore:
	- Update with new generated files.

Sun Oct 13 23:45:18 EDT 2002	nsc <Nicholas_Castellano@acml.com>
	* configure.in:
	- Current configure.in doesn't actually work with Autoconf 2.53.
	  Set AC_PREREQ(2.54) so users will get a sensible error message.

Sun Oct 13 23:13:37 EDT 2002	nsc <Nicholas_Castellano@acml.com>
	* src/server/query.c:
	- Dynamically size server query buffer.

Sun Oct 13 20:22:19 EDT 2002	nsc <Nicholas_Castellano@acml.com>
	* include/tds_sysdep_private.h.in include/tds_sysdep_public.h.in
	- Take a "best-guess" stab at a native WIN32 port.

Sun Oct 13 19:57:09 EDT 2002	nsc <Nicholas_Castellano@acml.com>
	* src/dblib/unittests/t0001.c src/dblib/unittests/t0005.c
	  src/dblib/unittests/t0006.c src/dblib/unittests/t0012.c
	  src/dblib/unittests/t0013.c src/dblib/unittests/t0014.c
	  src/dblib/unittests/t0015.c src/dblib/unittests/t0016.c
	  src/dblib/unittests/t0017.c src/dblib/unittests/t0018.c
	  src/dblib/unittests/t0020.c:
	- Remove bogus "#ifndef _WIN32"'s around calls to
	  tdsdump_open() in the dblib unittests.  I can't see any
	  sensible reason for doing this.  If tdsdump_open() does
	  not work on WIN32 for some reason, this isn't the right
	  way to fix it.

Sun Oct 13 19:50:13 EDT 2002	nsc <Nicholas_Castellano@acml.com>