@@ -43,6 +43,13 @@
 #include <dmalloc.h>
 #endif
 
+static char software_version[] =
+	"$Id: iconv.c,v 1.23 2002-10-14 13:36:54 castellano Exp $";
+static void *no_unused_var_warn[] = {
+	software_version,
+	no_unused_var_warn
+};
+
 /**
  * \defgroup conv Conversion
  * Convert between different charsets
